--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Cross-Browser CSS -->
     <link rel='stylesheet' href='css/normalize.css'>
     <!-- Custom CSS file -->
-    <link href='css/style1.css' rel='stylesheet'>
+    <link href='css/style.css' rel='stylesheet'>
     <link href='css/loader.css' rel='stylesheet'>
     <!-- Font Awesome CSS -->
     <link rel='stylesheet' href='fonts/font-awesome/css/font-awesome.min.css'>
@@ -190,7 +190,7 @@
                                         </div>
                                     </span>
                                 <span class="big price">
-                                        € 14.95
+                                        $ 14.95
                                     </span>
                                 <br>
                     </div>
